# substrate-aggregator

./: .gitignore  Cargo.toml  Makefile  README.md  frame-weight-template.hbs
.github/workflows/: check.yml
pallets/aggregator/: Cargo.toml  README.md  types.js
pallets/aggregator/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  utils.rs  weights.rs
pallets/aggregator/src/best_path_calculator/: noop_calculator.rs
pallets/aggregator/src/best_path_calculator/floyd_warshall/: algo.rs  calculator.rs  mod.rs
pallets/aggregator/src/trade_provider/: crypto_compare.rs  crypto_compare_tests.rs  mod.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
