[package]
name = "pallet-aggregator"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME aggregator pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec =         { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info =    { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', version = '4.0.0-dev', default-features = false }
frame-system =  { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', version = '4.0.0-dev', default-features = false }
sp-core =       { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', version = '5.0.0',     default-features = false }
sp-keystore =   { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', version = '0.11.0',    optional = true }
sp-io =         { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', version = '5.0.0',     default-features = false }
sp-runtime =    { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', version = '5.0.0',     default-features = false }
sp-std =        { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', version = '4.0.0-dev', default-features = false }
lite-json =     { version = "0.1", default-features = false }
log =           { version = "0.4.14", default-features = false }
parking_lot =   { version = "0.11.2" }
num-traits =    { version = "0.2.14", default-features = false, features = ["libm"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest", version = "4.0.0-dev", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]